--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-airbnb": "^15.1.0",
     "expo": "^20.0.0",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.47.0"
+    "react-native": "^0.47.0",
+    "react-navigation": "^1.0.0-beta.11"
   }
 }
