--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "eslint-config-airbnb": "^15.1.0",
     "expo": "^20.0.0",
+    "firebase": "^4.3.1",
+    "qs": "^6.5.1",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
     "react-navigation": "^1.0.0-beta.11"
