--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "qs": "^6.5.1",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
+    "react-native-plaid-link": "^1.1.0",
     "react-navigation": "^1.0.0-beta.11"
   }
 }
